# EchoCrafter

./: .gitignore  README.md  README.rst  echo-crafter.el  pyproject.toml  requirements.txt  reset-listener.sh  run-make-prompt.sh  run-mock-speech-reco.sh  run-speech-reco.sh  run-stt-and-make-prompt.sh  run_speech_reco.sh  setup.py  speech-command  speech-edit.el  speech_reco.py  todo.org
data/: computer-commands.yml  computer-commands_en_linux_v3_0_0.rhn
echo_crafter/: config.py
echo_crafter/commander/: dictionary.py  intent_handler.py  utils.py
echo_crafter/config/: __init__.py  computer-commands.yml  config.py  config_base.py  llm_config.py  openai_config.py  utils.py
echo_crafter/listener/: __init__.py  env_override.py  handle_intent.py  listener_with_wake_word.py  socket_read.py
echo_crafter/logger/: __init__.py
echo_crafter/prompts/: __init__.py  anthropic_test.py  interface.py  make_script.py  openaiAPI.py  openai_config.py  prompt_elisp.py  prompt_openai.py  prompt_python.py  prompt_question.py  prompt_shell.py  session_summarizer.py  sessions.py  utils.py
echo_crafter/speech_processor/: process_speech.py  resources.py  transcribe_deepgram_file.py  voice_assistant.py  (+1 more)
listener/: listener_with_wake_word.py  socket_read.py
make-prompt/: main.py  make_prompt.py  prompt_python.py  prompt_shell.py  shell.py
scripts/: restart_daemons.py  start-listener.sh  stop-listener.sh
speech-to-intent/: commands_clustering.ipynb  intent_infer.py  tldr_pages_dataset.csv
speech-to-text/: mock_speech_reco.py  speech_reco.py  speech_to_text.py  tests.py
(+51 files in other folders)
